@@ -1,3 +1,8 @@
+2004-09-13  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c: If you tried to invert color of an unloaded layer
+          you got a segmentation fault. I think it was discovered by Juergen.
+
 2004-09-11 Juergen Haas <juergenhaas@gmx.net>
 
 	*right click in window with active selection now shows part designator in statusline for easier 
